# ferlory

./: .gitattributes  .gitignore  .ignore  Cargo.toml  Dioxus.toml  README.md  build.rs  input.css  package-lock.json  rust-toolchain.toml  tailwind.css
assets/: style.css  tailwind.css
assets/content/: a.typ  aaa.html  home.html
assets/fonts/MapleMono-NF-CN-Bold/: result.css
assets/fonts/MapleMono-NF-CN-BoldItalic/: result.css
assets/fonts/MapleMono-NF-CN-Italic/: result.css
assets/fonts/MapleMono-NF-CN-Regular/: result.css
assets/fonts/MapleMono-NF-CN-SemiBold/: result.css
assets/iconfonts/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
assets/images/: output.avif
assets/styles/: fonts.css  main.css  tailwind.css  typst.css
content/: aaa.typ  home.typ
docs/: index.html
docs/asserts/images/avatar.avif/: index.html
docs/categories/: index.html
posts/: aaa.typ  home.typ
posts/rust-tui/: p1.typ
src/: config.rs  generate_typst.rs  main.rs  route.rs
src/components/: about.rs  avatar.rs  error_page.rs  friends.rs  home.rs  mod.rs  navbar.rs  notify.rs  page_not_found.rs  placeholder.rs  profile.rs  sidebar.rs
src/components/post_components/: details.rs  mod.rs  post.rs  post_card.rs
src/components/routes/: about.rs  error_page.rs  fantasy.rs  friends.rs  home.rs  mod.rs  moments.rs  programming.rs
src/utils/: mod.rs
