[workspace]
resolver = "3"
members = [
    "packages/main",
    "packages/components",
    "packages/routes",
    "packages/utils",
    "packages/macros",
    "packages/generated_typst",
]

[workspace.dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
const_format = { version = "0.2.34", features = ["fmt"] }
slug = "0.1.6"
phf = { version = "0.11", features = ["macros"] }
gloo = "0.11.0"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"]}
# reqwest = "0.12.12"
# dioxus-typst = { path = "../dioxus-typst" }
# typst = "0.13.0"
# tokio = "1.44.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
